--- a/index.html
+++ b/index.html
@@ -133,20 +133,189 @@
         </div>
       </nav>
       <section class="cards">
-        <div class="cards_projects">
-          <h3 class="cards_title">Your Projects</h3>
-          <div class="projects_card"></div>
-          <div class="projects_card"></div>
-          <div class="projects_card"></div>
-          <div class="projects_card"></div>
-          <div class="projects_card"></div>
-          <div class="projects_card"></div>
+        <div class="projects">
+          <h3 class="projects_title">Your Projects</h3>
+          <div class="projects_card">
+            <div class="card_text">
+              <h4 class="card_title">Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+                quaerat.
+              </p>
+            </div>
+            <div class="card_icons">
+              <a href=""
+                ><img
+                  class="icon"
+                  src="icons/star-plus-outline.svg"
+                  alt="star with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/eye-plus-outline.svg"
+                  alt="eye with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/source-branch.svg"
+                  alt="branch icon"
+              /></a>
+            </div>
+          </div>
+          <div class="projects_card">
+            <div class="card_text">
+              <h4 class="card_title">Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+                quaerat.
+              </p>
+            </div>
+            <div class="card_icons">
+              <a href=""
+                ><img
+                  class="icon"
+                  src="icons/star-plus-outline.svg"
+                  alt="star with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/eye-plus-outline.svg"
+                  alt="eye with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/source-branch.svg"
+                  alt="branch icon"
+              /></a>
+            </div>
+          </div>
+          <div class="projects_card">
+            <div class="card_text">
+              <h4 class="card_title">Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+                quaerat.
+              </p>
+            </div>
+            <div class="card_icons">
+              <a href=""
+                ><img
+                  class="icon"
+                  src="icons/star-plus-outline.svg"
+                  alt="star with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/eye-plus-outline.svg"
+                  alt="eye with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/source-branch.svg"
+                  alt="branch icon"
+              /></a>
+            </div>
+          </div>
+          <div class="projects_card">
+            <div class="card_text">
+              <h4 class="card_title">Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+                quaerat.
+              </p>
+            </div>
+            <div class="card_icons">
+              <a href=""
+                ><img
+                  class="icon"
+                  src="icons/star-plus-outline.svg"
+                  alt="star with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/eye-plus-outline.svg"
+                  alt="eye with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/source-branch.svg"
+                  alt="branch icon"
+              /></a>
+            </div>
+          </div>
+          <div class="projects_card">
+            <div class="card_text">
+              <h4 class="card_title">Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+                quaerat.
+              </p>
+            </div>
+            <div class="card_icons">
+              <a href=""
+                ><img
+                  class="icon"
+                  src="icons/star-plus-outline.svg"
+                  alt="star with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/eye-plus-outline.svg"
+                  alt="eye with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/source-branch.svg"
+                  alt="branch icon"
+              /></a>
+            </div>
+          </div>
+          <div class="projects_card">
+            <div class="card_text">
+              <h4 class="card_title">Super Cool Project</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus,
+                quaerat.
+              </p>
+            </div>
+            <div class="card_icons">
+              <a href=""
+                ><img
+                  class="icon"
+                  src="icons/star-plus-outline.svg"
+                  alt="star with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/eye-plus-outline.svg"
+                  alt="eye with a plus icon" /></a
+              ><a href=""
+                ><img
+                  class="icon"
+                  src="icons/source-branch.svg"
+                  alt="branch icon"
+              /></a>
+            </div>
+          </div>
         </div>
-        <aside class="cards_annoucements">
+        <aside class="annoucements">
           <h3 class="cards_title">Announcements</h3>
-          <div class="announcements_card"></div>
+          <div class="announcements_card">
+            <div class="card_tex">
+              <h5>Site maintence</h5>
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="card_tex">
+              <h5>Site maintence</h5>
+              <p>Harum nesciunt inventore nihil in?</p>
+            </div>
+            <div class="card_tex">
+              <h5>Site maintence</h5>
+              <p>Earum porro inventore est magnam.</p>
+            </div>
+          </div>
           <h3 class="cards_title">Trending</h3>
-          <div class="announcements_card"></div>
+          <div class="tendring_card"></div>
         </aside>
       </section>
     </main>
