--- a/index.html
+++ b/index.html
@@ -301,21 +301,19 @@
         <aside class="annoucements">
           <h3 class="cards_title">Announcements</h3>
           <div class="announcements_card">
-            <div class="card_tex">
+            <div class="announ_text">
               <h5>Site maintence</h5>
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
-            <div class="card_tex">
+            <div class="announ_text">
               <h5>Site maintence</h5>
               <p>Harum nesciunt inventore nihil in?</p>
             </div>
-            <div class="card_tex">
+            <div class="announ_text">
               <h5>Site maintence</h5>
               <p>Earum porro inventore est magnam.</p>
             </div>
           </div>
-          <h3 class="cards_title">Trending</h3>
-          <div class="tendring_card"></div>
         </aside>
       </section>
     </main>
